show not met access token requirements

--- a/src/app/bags-overview/bags-overview.css
+++ b/src/app/bags-overview/bags-overview.css
@@ -30,3 +30,10 @@ input[type="text"] {
 .permission {
   margin-left: 8px;
 }
+
+.permissionMissing {
+  margin-left: 8px;
+  text-decoration-line: underline;
+  text-decoration-thickness: 2px;
+  text-decoration-color: red;
+}
