fetch characters from gw2 api

--- a/src/app/bags-overview/bags-overview.html
+++ b/src/app/bags-overview/bags-overview.html
@@ -36,5 +36,12 @@
         </td>
       </tr>
     }
+    @for(character of chars(); track $index) {
+      <tr>
+        <td>{{character.name}}</td>
+        <td>{{occupiedInventorySlots(character) }} / {{ totalInventorySlots(character)}}</td>
+        <td>{{bags(character)}}</td>
+      </tr>
+    }
   </table>
 </section>
