--- a/src/styles.css
+++ b/src/styles.css
@@ -11,5 +11,5 @@
   --primary-color: #e65c00;
   --secondary-color: #ff944d;
   --accent-color: #e8e7fa;
-  --shadow-color: #E8E8E8;
+  --shadow-color: #e8e8e8e8;
 }
