--- a/src/app/bags-overview/bags-overview.css
+++ b/src/app/bags-overview/bags-overview.css
@@ -88,3 +88,17 @@ tr:hover {
   row-gap: 12px;
   justify-content: space-around;
 }
+
+.unused-bags {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+#subheader {
+  text-align: center;
+  background-color: var(--primary-color);
+  color: white;
+  font-weight: bold;
+  padding: 6px;
+}
