bag cell styling

--- a/src/app/unused-bag-cell/unused-bag-cell.html
+++ b/src/app/unused-bag-cell/unused-bag-cell.html
@@ -9,9 +9,9 @@
       />
     </div>
     <div class="details">
-      <div>Slots: {{bag().bag.totalSlots}}</div>
-      <div>Binding: {{bag().bag.boundTo}}</div>
-      <div>Location: {{bag().location}}</div>
+      <span class="descriptor">Slots</span> <span>{{bag().bag.totalSlots}}</span>
+      <span class="descriptor">Binding</span> <span>{{bag().bag.boundTo}}</span>
+      <span class="descriptor">Location</span> <span>{{bag().location}}</span>
     </div>
   </div>
 </div>
