--- a/src/app/unused-bag-cell/unused-bag-cell.css
+++ b/src/app/unused-bag-cell/unused-bag-cell.css
@@ -1,26 +1,35 @@
 .bag-icon {
-    height: 64px;
-    width: 100%;
-    object-fit: scale-down;
-    border-radius: 6px;
+  height: 64px;
+  width: 100%;
+  object-fit: scale-down;
+  border-radius: 6px;
 }
 
 div.bag {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 4px;
+  border: 1px solid;
+  border-color: var(--primary-color);
+  border-radius: 8px;
+  padding: 6px;
 }
 
 div.info {
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-    gap: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  gap: 8px;
 }
 
 div.details {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  column-gap: 12px;
+  row-gap: 6px;
+}
+
+span.descriptor {
+  font-weight: bold;
 }
