--- a/src/app/bags-overview/bags-overview.css
+++ b/src/app/bags-overview/bags-overview.css
@@ -83,7 +83,7 @@ tr:hover {
 
 .bag-grid {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
   column-gap: 24px;
   row-gap: 12px;
   justify-content: space-around;
