fetching information from api in service

--- a/src/app/bags-overview/bags-overview.css
+++ b/src/app/bags-overview/bags-overview.css
@@ -73,6 +73,10 @@ td, th {
   padding: 6px;
 }
 
+td.align-right {
+  text-align: right;
+}
+
 tr:nth-child(even) {
   background-color: var(--accent-color);
 }
