--- a/src/app/bags-overview/bags-overview.html
+++ b/src/app/bags-overview/bags-overview.html
@@ -30,7 +30,7 @@
           <th>Character</th>
           <th>Used Slots</th>
           <th>Equipped Bags</th>
-          <th>Available Bag Slots</th>
+          <th>Available Bag#</th>
         </tr>
       </thead>
       <tbody>
@@ -48,7 +48,7 @@
               }
               </div>
             </td>
-            <td>{{ character.emptyBagSlots }}</td>
+            <td class="align-right">{{ character.emptyBagSlots }}</td>
           </tr>
         }
       </tbody>
